--- a/css/style.css
+++ b/css/style.css
@@ -729,6 +729,7 @@ h3.my-profission {
     overflow: hidden;
     display: -webkit-box;
     -webkit-line-clamp: 3;
+    line-clamp: 3;
     -webkit-box-orient: vertical;
 }
 
